# gol2

./: Cargo.toml
libraries/egui-macroquad/: Cargo.toml
libraries/egui-miniquad/: Cargo.toml
src/: board.rs  color_schemes.rs  config.rs  debug_info.rs  game.rs  input.rs  main.rs  notifications.rs  recording.rs  rendering.rs  rules.rs  ui.rs
src/utils/: color.rs  mod.rs  tiny_str.rs
