[package]
name = "gol2"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
clipline = "0.1.1"
log = "0.4"
macroquad = "0.4.4"
fps_ticker = "1.0.0"
egui-macroquad = { path = "./libraries/egui-macroquad/" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
base64 = "0.22.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
rand = "0.8.5"
image = "0.25.4"
anyhow = "1.0.91"
gif = "0.13.1"
crossbeam-channel = "0.5.13"

[profile.dev]
opt-level = 3
